[gd_scene load_steps=3 format=3 uid="uid://dvvv8k1g6tgog"]

[ext_resource type="Script" uid="uid://b1iip1rqoy2v3" path="res://Code/Scenes/UI/Cards/attack_item.gd" id="1_cuu5a"]
[ext_resource type="PackedScene" uid="uid://bs3ila6cpt8n1" path="res://Scenes/UI/UIComponents/types.tscn" id="3_tiejp"]

[node name="AttackItem" type="MarginContainer"]
custom_minimum_size = Vector2(416, 0)
offset_left = 21.0
offset_top = 11.0
offset_right = 477.0
offset_bottom = 71.0
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("1_cuu5a")
card_name = "HUH?"

[node name="AttackButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2

[node name="AllText" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 4

[node name="Base Text" type="HBoxContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="AllText/Base Text"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 20

[node name="TypeContainer" type="VBoxContainer" parent="AllText/Base Text"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Types" type="HBoxContainer" parent="AllText/Base Text/TypeContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="Types" parent="AllText/Base Text/TypeContainer/Types" instance=ExtResource("3_tiejp")]
visible = false
layout_mode = 2

[node name="Types2" parent="AllText/Base Text/TypeContainer/Types" instance=ExtResource("3_tiejp")]
visible = false
layout_mode = 2

[node name="Types3" parent="AllText/Base Text/TypeContainer/Types" instance=ExtResource("3_tiejp")]
visible = false
layout_mode = 2

[node name="Types4" parent="AllText/Base Text/TypeContainer/Types" instance=ExtResource("3_tiejp")]
visible = false
layout_mode = 2

[node name="Types5" parent="AllText/Base Text/TypeContainer/Types" instance=ExtResource("3_tiejp")]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="AllText/Base Text/TypeContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 17

[node name="Name" type="RichTextLabel" parent="AllText/Base Text"]
unique_name_in_owner = true
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "[center]Everyone Explode Now"
fit_content = true

[node name="Damage" type="RichTextLabel" parent="AllText/Base Text"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
mouse_filter = 2
bbcode_enabled = true
text = "[center]-200"
fit_content = true

[node name="MarginContainer2" type="MarginContainer" parent="AllText/Base Text"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 15

[node name="MarginContainer3" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 1

[node name="EffectContainer" type="HBoxContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="AllText/EffectContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 4

[node name="EffectText" type="RichTextLabel" parent="AllText/EffectContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
theme_override_font_sizes/mono_font_size = 12
text = "HUGE EFFECT TEX LIKE SUPER HUGE, JUST SAY EVERYTHING YOU EVER WANTED TO SAY, YOUR WILL YOUR DECLARATION. MAYBE THROW IN THAT 10 HOUR VIDEO ESSAY YOU LIKED SO MUCH. MAYBE NOT... SORRY"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="AllText/EffectContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10

[node name="MarginContainer2" type="MarginContainer" parent="AllText"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 4

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="AttackButton" to="." method="_on_attack_button_pressed"]
